--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
     "cli": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -26,7 +27,8 @@
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "postgrator": "^3.10.2",
-    "postgrator-cli": "^3.1.0"
+    "postgrator-cli": "^3.1.0",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
